# citationtracker

./: .env.example  .gitignore  CLAUDE.md  CRAWLER_ARCHITECTURE.md  Dockerfile  Dockerfile.test  SECURITY_HARDENING_SPEC.md  docker-compose.e2e.yml  docker-compose.yml  drizzle.config.ts  email-previews.html  eslint.config.mjs  knip.json  middleware.test.ts  middleware.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vercel.json  vitest-env.d.ts  vitest.api-client.config.ts  vitest.config.ts  vitest.cron-it.config.ts  vitest.dashboard-integration.config.ts  vitest.integration.config.ts  vitest.setup.ts
Docs/: ARCHITECTURE.md  BUSINESS_LOGIC.md  CHANGELOG.md  CONVERSION-AUDIT-2026-06-10.md  CUSTOMER-JOURNEY.md  INCREMENTAL-PR-NOTES.md  INTEGRATION-REVIEW-2026-06-09.md  LOCAL-TEST-ENV.md  PCG_FlowBlinq_AI_Citation_Tracker_Brief.docx  PSEUDOCODE-REVIEW-fix-audit-incremental.md  api-reference.md  citation-check-cost-audit.tex  cli-quickstart.md  geo-improvement-sprint-overview.md  local-dev-qstash.md  manipal-crawl-runbook.md  pipeline-failure-recovery.md  runtime-policy.md  spec-index.md  wordpress-plugin-submission-guidelines.md
__tests__/: RowActions.handleRerunAudit.test.tsx  SitePageClient.free-tier-tabs.test.tsx  SitePageClient.free-tier-upsell.test.tsx  SitePageClient.handleRefreshScore.test.tsx  (+103 more)
api-clients/cpp/: CMakeLists.txt  README.md
api-clients/cpp/.github/workflows/: ci.yml
api-clients/cpp/apps/: ga_pipe_main.cpp
api-clients/cpp/cmake/: Deps.cmake
api-clients/cpp/include/ga_pipe/: auth_client.hpp  config.hpp  dead_letter.hpp  flowblinq_reader.hpp  logger.hpp  page_view.hpp  page_view_queue.hpp  pipe_runner.hpp  response_validator.hpp  signal_handler.hpp  sink.hpp  sink_template.hpp  state_file.hpp  version.hpp
api-clients/cpp/sinks/: ga4.yaml  webhook.yaml
api-clients/cpp/src/: auth_client.cpp  config.cpp  dead_letter.cpp  flowblinq_reader.cpp  logger.cpp  page_view.cpp  page_view_queue.cpp  pipe_runner.cpp  response_validator.cpp  signal_handler.cpp  sink.cpp  sink_template.cpp  state_file.cpp
api-clients/cpp/tests/: CMakeLists.txt
api-clients/cpp/tests/integration/: end_to_end_test.cpp  malformed_response_test.cpp  mock_flowblinq_server.hpp  mock_ga4_server.hpp  restart_resume_test.cpp  sigterm_drain_test.cpp
api-clients/cpp/tests/unit/: auth_client_test.cpp  config_test.cpp  logger_redaction_test.cpp  queue_test.cpp  response_validator_test.cpp  retry_backoff_test.cpp  sink_template_test.cpp  state_file_test.cpp
(+1198 files in other folders)
